refactor run project endpoints
